Added listAllTicket service | Initial change of SSE
