# tms-tickets/src/main/java/com/xpo/ltl/tickets/TicketResource.java
@@ -63,6 +63,18 @@ public class TicketResource
     }
 
     @GET
+    @Produces({MediaType.APPLICATION_JSON,MediaType.APPLICATION_XML})
+	@ApiOperation(value = "List All Ticket Info", response = Ticket.class, responseContainer="List")
+    @ApiResponses({
+    	@ApiResponse(code = 400, message = "Bad Request: Invalid input"),
+    	@ApiResponse(code = 404, message = "Ticket NOT FOUND")
+    })
+	public Response listAll()
+	{
+    	return Response.ok(ticketService.listAll()).build();
+	}
+
+    @GET
     @Path("/{id}")
     @Produces({MediaType.APPLICATION_JSON,MediaType.APPLICATION_XML})
 	@ApiOperation(value = "Get Ticket Info by Ticket ID", response = Ticket.class)
